# bltui

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  PKGBUILD  README.md  justfile
.github/workflows/: audit.yml  cd.yml  ci.yml  pr-checks.yml
bltui/: Cargo.toml  PKGBUILD  rustfmt.toml
bltui/src/: devices.rs  events.rs  lib.rs  main.rs  settings.rs  ui.rs
bltui/src/bluetooth/: agent.rs  controller.rs  mod.rs
bluetui/: Cargo.toml
bluetui/src/: agent.rs  app.rs  bluetooth.rs  devices.rs  lib.rs  logging.rs  main.rs
bluetui/src/bluetooth/: agent.rs  controller.rs  devices.rs
bluetui/src/events/: keys.rs  mod.rs  tick.rs
bluetui/src/ui/: mod.rs  popup.rs  ui.rs
bluetui/src/ui/widgets/: device_details.rs  devices.rs  logger.rs  mod.rs  popup.rs  statics.rs
bluez-async/: Cargo.toml
bluez-async/examples/: characteristics.rs
bluez-async/src/: adapter.rs  characteristic.rs  device.rs  events.rs  lib.rs  macaddress.rs  messagestream.rs  modalias.rs  serde_path.rs
chesapeake/: Cargo.toml
chesapeake/src/: agent.rs  app.rs  bluetooth.rs  devices.rs  main.rs  ui.rs
src/: app.rs  bluetooth.rs  devices.rs  lib.rs  logging.rs  main.rs  settings.rs  ui.rs
src/bluetooth/: agent.rs  controller.rs  devices.rs  mod.rs
src/events/: adapter.rs  agent.rs  mod.rs
src/ui/: mod.rs
src/ui/widgets/: device_details.rs  devices.rs  mod.rs  popup.rs  statics.rs
