[package]
name = "bltui"
version = "0.1.3"
edition = "2021"
authors = ["simonadi"]
homepage = "https://github.com/simonadi/bltui"
repository = "https://github.com/simonadi/bltui"
description = "A Bluetooth device managing TUI"
keywords = ["bluetooth", "tui", "cli", "terminal"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
btleplug = { version = "0.10.1", features  = ["serde"]}
clap = { version = "4.0.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.20.0", features = ["full"] }
crossterm = "0.25"
tui = "0.19"
dirs = "4.0.0"
log = "0.4"
time = { version = "0.3", features = ["macros", "formatting"] }
tui-logger = "0.8"
lazy_static = "1.4.0"
thiserror = "1.0"
toml = "0.5.10"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "3.1.0", default-features = false, features = ["tokio"] }
zvariant = "3.6.0"


# [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]


# [target.'cfg(target_os = "windows")'.dependencies]